force-app/main/default/objects/leaseworks__Addresses__c/leaseworks__Addresses__c.object-meta.xml
<CustomObject>
    <label>Addresses</label>
    <nameField>
        <label>Addresses Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>