force-app/main/default/objects/leaseworks__Addresses__c/fields/leaseworks__Account__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Account__c</fullName>
    <description>Master Detail of Account</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Addresses</relationshipLabel>
    <relationshipName>Addresses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>