force-app/main/default/objects/leaseworks__Addresses__c/fields/leaseworks__Comment__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Comment__c</fullName>
    <description>Any Comment for the Address</description>
    <inlineHelpText>Add the comments here</inlineHelpText>
    <label>Comment</label>
    <length>120000</length>
    <type>LongTextArea</type>
</CustomField>