force-app/main/default/objects/leaseworks__Addresses__c/fields/leaseworks__Street__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Street__c</fullName>
    <description>Street of the Address</description>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>