force-app/main/default/objects/leaseworks__Addresses__c/fields/leaseworks__Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Zip_Postal_Code__c</fullName>
    <description>Zip/Postal Code of the city</description>
    <label>Zip/Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>